USAGOV-1469-Homepage-changes-grid-alignment: Fix the carousel button bug

--- a/web/themes/custom/usagov/sass/_carousel.scss
+++ b/web/themes/custom/usagov/sass/_carousel.scss
@@ -340,7 +340,6 @@
       margin: 0;
 
       .slick-list {
-        width: 1044px;
         max-width: 1044px;
       }
 
